# mediapipe-rs-dev

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yaml
assets/testdata/video/scripts/: generate_banana_clock_tabby.sh
examples/: image_classification.rs  object_detection.rs
scripts/: cargo-test.sh  download-models.sh  env.sh  ffmpeg-deps-init.sh  flatbuffers-init.sh  rust-init.sh  wasmedge-init.sh
src/: error.rs  lib.rs
src/model/: mod.rs  zip.rs
src/model/tflite/: mod.rs
src/model_resource/: mod.rs  zip.rs
src/model_resource/tflite/: mod.rs
src/postprocess/: mod.rs
src/postprocess/containers/: category.rs  classification_result.rs  detection_result.rs  mod.rs  rect.rs
src/postprocess/containers/common/: mod.rs
src/postprocess/containers/vision/: landmark.rs  (+5 more)
src/postprocess/ops/: dequantize.rs  mod.rs  sigmoid.rs
src/postprocess/processing/: mod.rs
src/postprocess/sessions/: classification_session.rs  detection_session.rs  mod.rs
src/postprocess/utils/: mod.rs  vision.rs
src/preprocess/: mod.rs
src/preprocess/audio/: audio_data_to_tensor.rs  audio_raw_data.rs  ffmpeg_data.rs  mod.rs  symphonia_data.rs
src/preprocess/common/: ffmpeg_input.rs
src/preprocess/text/: bert_tensor.rs  mod.rs  regex_to_tensor.rs
src/preprocess/vision/: ffmpeg.rs  image.rs  mod.rs
src/tasks/: mod.rs
src/tasks/audio/: mod.rs
src/tasks/common/: detection_common_impl.rs  mod.rs
src/tasks/vision/: mod.rs
tests/: audio_classification.rs  ffmpeg_video_input.rs  gesture_recognition.rs  hand_landmark.rs  image_classification.rs  image_segmentation.rs  mod.rs  object_detection.rs  text_classification.rs
tests/vision/: image_classification.rs  mod.rs
(+42 files in other folders)
